[tool.poetry]
name = "raw-dbmodel"
version = "0.1.3"
description = "A library to interact with raw SQL databases"
authors = ["Flavio Oria <flavio.oriap@gmail.com>"]
readme = "README.md"
license = "MIT"
maintainers = ["Flavio Oria <flavio.oriap@gmail.com>"]
keywords = ["packaging", "poetry", "library", "python"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
sqlmodel = "^0.0.18"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
assertpy = "^1.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
