[tool.poetry]
name = "raw-dbmodel"
version = "0.2.1"
description = "A library to interact with raw SQL databases"
authors = ["Flavio Oria <flavio.oriap@gmail.com>"]
readme = "README.md"
license = "MIT"
maintainers = ["Flavio Oria <flavio.oriap@gmail.com>"]
keywords = ["packaging", "poetry", "library", "python"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
sqlmodel = "^0.0.18"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"
rich = "^13.7.1"
psycopg2 = { version = "^2.9.6", optional = true, extras = ["binary"] }
mysqlclient = { version = "^2.1.1", optional = true }
pymysql = { version = "^1.0.2", optional = true }
mariadb = { version = "^1.1.6", optional = true }


[tool.poetry.group.dev.dependencies]
assertpy = "^1.1"
psycopg2 = "^2.9.9"

[tool.poetry.extras]
psycopg2 = ["psycopg2"]
mysqlclient = ["mysqlclient"]
pymysql = ["pymysql"]
mariadb = ["mariadb"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
